--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
 <p>As the fourth employee at a Big Data startup, I helped grow the company from six people to over forty, surviving one name change and three changes of logos. Technical responsibilities revolved around the development of a personalization platform and applications on top of Hadoop, HBase, and Cassandra.</p>
 <p>I was the project/tech lead on the effort to open source our technology, responsible for breaking down the large effort into manageable, prioritized tasks for the entire team. This was the beginning of the <a href="https://github.com/kijiproject">Kiji Project</a>. I also was the tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a></p>
-<p>As we grew, I transitioned to a dual technical-managerial role, managing ten direct reports (maximum of five at one time).</p>
-<p>Tech Lead/Manager of the platform team, responsible for the lowest level core technologies in WibiData's architecture as well as our internal build tools and scripts.</p>
+<p>As we grew, I transitioned to a dual technical-managerial role, managing ten direct reports during my tenure (a maximum of five at one time).</p>
+<p>My last position was Tech Lead/Manager of the platform team, responsible for the lowest level core technologies in WibiData's architecture as well as our internal build tools and scripts.</p>
 </dd>
 <dt>2011 (3 months)</dt>
 <dd><p><em>Software Engineer at <a href="http://www.panasas.com/">Panasas</a></em> (Pittsburgh, PA).</p>
@@ -46,22 +46,29 @@
 <dl>
 <dt>2006-2011</dt>
 <dd><p><em>Masters Degree in Computer Science at Carnegie Mellon University</em> (Pittsburgh, PA)</p>
-<p>Advisor: Garth Gibson. * Conducted research in CMU’s Parallel Data Lab group under the programs of the <a href="http://www.pdsi-scidac.org/">Petascale Data Storage Institute</a> and the [Institute For Reliable High Performance Information Technology] (http://institute.lanl.gov/isti/irhpit). * Benchmarked Flash-based SSDs and evaluated cost efficiency of different hybrid configurations. Papers: http://www.pdl.cmu.edu/PDL-FTP/PDSI/simsa-pdsw08.pdf and http://www.pdl.cmu.edu/PDL-FTP/PDSI/Polte.pdf. Included work inside the Linux kernel. * Collaborated with Los Alamos National Laboratory in the design and implementation of the [Parallel Log-structured File System] (http://institutes.lanl.gov/plfs/). Papers: http://institutes.lanl.gov/plfs/plfs.pdf and http://www.pdsi-scidac.org/events/PDSW09/resources/pdsw09-final9.pdf * Investigated the design of parallel filesystems for HPC built on top of BigTable-like software. Paper: http://www.cs.cmu.edu/~svp/2009hotcloud-tablefs.pdf</p>
+<p>Advisor: Garth Gibson.</p>
+<ul>
+<li>Conducted research in CMU’s Parallel Data Lab group under the programs of the <a href="http://www.pdsi-scidac.org/">Petascale Data Storage Institute</a> and the <a href="http://institute.lanl.gov/isti/irhpit">Institute For Reliable High Performance Information Technology</a>.</li>
+<li>Benchmarked Flash-based SSDs and evaluated cost efficiency of different hybrid configurations. Papers: <a href="http://www.pdl.cmu.edu/PDL-FTP/PDSI/simsa-pdsw08.pdf" class="uri">http://www.pdl.cmu.edu/PDL-FTP/PDSI/simsa-pdsw08.pdf</a> and <a href="http://www.pdl.cmu.edu/PDL-FTP/PDSI/Polte.pdf" class="uri">http://www.pdl.cmu.edu/PDL-FTP/PDSI/Polte.pdf</a>. Included work inside the Linux kernel.</li>
+<li>Collaborated with Los Alamos National Laboratory in the design and implementation of the <a href="http://institutes.lanl.gov/plfs/">Parallel Log-structured File System</a>. Papers: <a href="http://institutes.lanl.gov/plfs/plfs.pdf" class="uri">http://institutes.lanl.gov/plfs/plfs.pdf</a> and <a href="http://www.pdsi-scidac.org/events/PDSW09/resources/pdsw09-final9.pdf" class="uri">http://www.pdsi-scidac.org/events/PDSW09/resources/pdsw09-final9.pdf</a></li>
+<li>Investigated the design of parallel filesystems for HPC built on top of BigTable-like software. Paper: <a href="http://www.cs.cmu.edu/~svp/2009hotcloud-tablefs.pdf" class="uri">http://www.cs.cmu.edu/~svp/2009hotcloud-tablefs.pdf</a></li>
+</ul>
 </dd>
 <dt>1999-2005</dt>
 <dd><p><em>Bachelor of Arts and Master of Engineering in Computer Science at Cornell University</em> (Ithaca, NY)</p>
 <p>Emphasis on courses in Distributed Systems, Networks, and Theory.</p>
 <ul>
-<li>Independent Research with Prof. Emin Gun Sirer - (2001- 2002) Researched and developed an anonymizing peer-to-peer overlay network based on dining cryptographer nets called ‘Herbivore’. White paper available: http://www.cs.cornell.edu/People/egs/herbivore</li>
+<li>Independent Research with Prof. Emin Gun Sirer - (2001- 2002) Researched and developed an anonymizing peer-to-peer overlay network based on dining cryptographer nets called ‘Herbivore’. White paper available: <a href="http://www.cs.cornell.edu/People/egs/herbivore" class="uri">http://www.cs.cornell.edu/People/egs/herbivore</a></li>
 <li>Cornell University Neurobiology Department - (2005) Software engineer for audio experimentation and education cross platform workbench program called “Koé”, providing functionality similar to professional synthesis applications, such as Reaktor.</li>
 </ul>
 </dd>
 </dl>
 <h2 id="hobbies-and-other-activities">Hobbies and Other Activities</h2>
 <ul>
-<li><p>Hiking</p></li>
-<li><p>Vegetarian Cooking</p></li>
-<li><p>My pet <a href="https://www.youtube.com/watch?v=SzU_dGHykZ4">rabbit</a></p></li>
+<li><a href="http://i.imgur.com/ApbbKi8.jpg">Hiking</a></li>
+<li><a href="http://markbittman.com/book/how-to-cook-everything-vegetarian/">Vegetarian Cooking</a></li>
+<li>Losing at <a href="http://blog.dota2.com/">Dota</a></li>
+<li>Taking care of my pet <a href="https://www.youtube.com/watch?v=SzU_dGHykZ4">rabbit</a></li>
 </ul>
 </body>
 </html>
