--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 <dl>
 <dt>2012-2015</dt>
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
-<p>As the fourth employee at a Big Data startup, I helped grow the company from six people to over forty, surviving one name change and three changes of logos. Technical responsibilities revolved around the development of a personalization platform and applications on top of Hadoop, HBase, and Cassandra.</p>
-<p>I was the project/tech lead on the effort to open source our technology, responsible for breaking down the large effort into manageable, prioritized tasks for the entire team. This was the beginning of the <a href="https://github.com/kijiproject">Kiji Project</a>. I also was the tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a></p>
+<p>Fourth employee at a Big Data startup that grew to over forty, surviving one name change and three changes to the logo. Technical work was the development of a platform for personalized applications on top of Hadoop, HBase, and Cassandra.</p>
+<p>I was the project/tech lead on the effort to open source our software stack, responsible for breaking down the entire effort into manageable, prioritized tasks for the team. This was the beginning of the <a href="https://github.com/kijiproject">Kiji Project</a>. Later, I also was the tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a></p>
 <p>As we grew, I transitioned to a dual technical-managerial role, managing ten direct reports during my tenure (a maximum of five at one time).</p>
 <p>My last position was Tech Lead/Manager of the platform team, responsible for the lowest level core technologies in WibiData's architecture as well as our internal build tools and scripts.</p>
 </dd>
 <dt>2011 (3 months)</dt>
 <dd><p><em>Software Engineer at <a href="http://www.panasas.com/">Panasas</a></em> (Pittsburgh, PA).</p>
-<p>Internship after leaving grad school. Relevant project work was the instrumentation of a FreeBSD kernel driver to implement QoS in network attached storage devices of a parallel, distributed filesystem.</p>
+<p>Internship after leaving grad school. Relevant project work was the instrumentation of a FreeBSD kernel driver to implement QoS I/O scheduling in network attached storage devices for our parallel, distributed filesystem.</p>
 </dd>
 </dl>
 <h2 id="technologies-and-skills">Technologies and Skills</h2>
 <dl>
 <dt>Python</dt>
-<dd>Most recent technological work has been in Python. Author of devtools and small build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a>.
+<dd>Most of my recent technological work has been in Python. Author of devtools and small build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a>.
 </dd>
 <dt>Java</dt>
-<dd>Experienced with Java for distributed applications and Map Reduce programs. I've also used Scala but am less familiar with it.
+<dd>Experienced coding distributed applications and map-reduce programs in Java. I've also used Scala but am less familiar with it.
 </dd>
 <dt>Hadoop Stack</dt>
-<dd>I've used a variety of technologies in the Hadoop ecosystem: MapReduce, Yarn, HBase, Hive, Scaldng, etc. This space is always moving and I've had to port our ecosystem to different versions of the Cloudera Distribution of Hadoop and others, dealing with the bugs and changes along the way.
+<dd>I've used a variety of technologies in the Hadoop ecosystem for model training and analytics: MapReduce, Yarn, HBase, Hive, Scaldng, etc. This space is always moving and I've had to port our ecosystem to different versions of the Cloudera Distribution of Hadoop and others, dealing with the bugs and changes along the way.
 </dd>
 <dt>SCRUM and hygienic coding</dt>
-<dd>One of the first scrum masters at WibiData. Led Sprint Planning for platform team. Experienced in a culture of culture of code reviews, code style guides, etc. Owned the effort on crafting our Python style guide.
+<dd>I was one of the first scrum masters at WibiData. Led Sprint Planning for platform team. Experienced in a culture of culture of code reviews, code style guides, etc. Owned the effort on writing our Python style guide.
 </dd>
 </dl>
 <h2 id="education">Education</h2>
