Remove twitter handle since I barely use it.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1 id="milo-polte">Milo Polte</h1>
 <hr />
-<p><code>762 Shotwell St                                      milo.polte@gmail.com</code><br /><code>San Francisco, CA 94110                                   github.com/sqrl</code><br /><code>Phone: 607-280-3615                                       @squirrel_error</code></p>
+<p><code>762 Shotwell St                                      milo.polte@gmail.com</code><br /><code>San Francisco, CA 94110                                   github.com/sqrl</code><br /><code>Phone: 607-280-3615</code></p>
 <hr />
 <h2 id="work-experience">Work Experience</h2>
 <dl>
