Adjust CMU degree text.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h2 id="education">Education</h2>
 <dl>
 <dt>2006-2011</dt>
-<dd><p><em>Masters Degree in Computer Science at Carnegie Mellon University</em> (Pittsburgh, PA)</p>
+<dd><p><em>Masters Degree in Computer Science with partial work towards a PhD at Carnegie Mellon University</em> (Pittsburgh, PA)</p>
 <p>Advisor: Garth Gibson.</p>
 <ul>
 <li>Conducted research in CMU’s Parallel Data Lab group under the programs of the <a href="http://www.pdsi-scidac.org/">Petascale Data Storage Institute</a> and the <a href="http://institute.lanl.gov/isti/irhpit">Institute For Reliable High Performance Information Technology</a>.</li>
