Add a comment about software being used in Production.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <dl>
 <dt>2012-2015</dt>
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
-<p>Fourth employee at a Big Data startup that grew to over forty, surviving one name change and three changes to the logo. Technical work was the development of a platform for personalized applications on top of Hadoop, HBase, and Cassandra.</p>
+<p>Fourth employee at a Big Data startup that grew to over forty, surviving one name change and three changes to the logo. Technical work was the development of a platform for personalized applications on top of Hadoop, HBase, and Cassandra. Our platform was used in production to deliver product recommendations at two large retail customers, including holiday traffic.</p>
 <p>I was the project/tech lead on the effort to open source our software stack, responsible for breaking down the entire effort into manageable, prioritized tasks for the team. This was the beginning of the <a href="https://github.com/kijiproject">Kiji Project</a>. Later, I also was the tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a></p>
 <p>As we grew, I transitioned to a dual technical-managerial role, managing ten direct reports during my tenure (a maximum of five at one time).</p>
 <p>My last position was Tech Lead/Manager of the platform team, responsible for the lowest level core technologies in WibiData's architecture as well as our internal build tools and scripts.</p>
