Add LinkedIn. Make things more like bullets.

--- a/index.html
+++ b/index.html
@@ -11,35 +11,65 @@
 <body>
 <h1 id="milo-polte">Milo Polte</h1>
 <hr />
-<p><code>762 Shotwell St                                      milo.polte@gmail.com</code><br /><code>San Francisco, CA 94110                                   github.com/sqrl</code><br /><code>Phone: 607-280-3615</code></p>
+<p><code>762 Shotwell St                                      milo.polte@gmail.com</code><br /><code>San Francisco, CA 94110                                   github.com/sqrl</code><br /><code>Phone: 607-280-3615                         www.linkedin.com/in/milopolte</code></p>
 <hr />
 <h2 id="work-experience">Work Experience</h2>
 <dl>
 <dt>2012-2015</dt>
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
-<p>Fourth employee at a Big Data startup that grew to over forty, surviving one name change and three changes to the logo. Technical work was the development of a platform for personalized applications on top of Hadoop, HBase, and Cassandra. Our platform was used in production to deliver product recommendations at two large retail customers, including holiday traffic.</p>
-<p>I was the project/tech lead on the effort to open source our software stack, responsible for breaking down the entire effort into manageable, prioritized tasks for the team. This was the beginning of the <a href="https://github.com/kijiproject">Kiji Project</a>. Later, I also was the tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a></p>
-<p>As we grew, I transitioned to a dual technical-managerial role, managing ten direct reports during my tenure (a maximum of five at one time).</p>
-<p>My last position was Tech Lead/Manager of the platform team, responsible for the lowest level core technologies in WibiData's architecture as well as our internal build tools and scripts.</p>
+<ul>
+<li>Fourth employee at a Big Data startup that grew to over forty</li>
+<li>Survived one name change and three changes to the logo.</li>
+<li>Developed a platform for personalized applications on top of Hadoop, HBase, and Cassandra.
+<ul>
+<li>Our platform was used in production to deliver real-time product recommendations at two large retail customers, including holiday traffic.</li>
+</ul></li>
+<li>Project/tech lead on the effort to open source our software stack as the <a href="https://github.com/kijiproject">Kiji Project</a>.
+<ul>
+<li>Broke down the effort into manageable, prioritized tasks for the team, delivering tested, first releases on schedule.</li>
+<li>Kiji permitted us to better engage with our community with our own meet-ups, etc.</li>
+<li>Tech lead on our earliest real time scoring component, <a href="https://github.com/kijiproject/kiji-scoring">Kiji Scoring</a> that served our first real time recommendations.</li>
+</ul></li>
+<li><p>Transitioned to a dual technical-managerial role and managed ten direct reports during my tenure (a maximum of five at one time).</p></li>
+<li>Tech Lead/Manager of the platform team.
+<ul>
+<li>Responsible for the foundational layers of our stack.</li>
+<li>Developed and help design internal build tools and scripts that reduced compile time and improved engineer productivity.</li>
+</ul></li>
+</ul>
 </dd>
 <dt>2011 (3 months)</dt>
-<dd><p><em>Software Engineer at <a href="http://www.panasas.com/">Panasas</a></em> (Pittsburgh, PA).</p>
-<p>Internship after leaving grad school. Relevant project work was the instrumentation of a FreeBSD kernel driver to implement QoS I/O scheduling in network attached storage devices for our parallel, distributed filesystem.</p>
+<dd><p><em>Software Engineer internship at <a href="http://www.panasas.com/">Panasas</a></em> (Pittsburgh, PA).</p>
+<ul>
+<li>Project work towards instrumenting a FreeBSD kernel driver to implement QoS I/O scheduling in network attached storage devices for our parallel, distributed filesystem.</li>
+</ul>
 </dd>
 </dl>
 <h2 id="technologies-and-skills">Technologies and Skills</h2>
 <dl>
 <dt>Python</dt>
-<dd>Most of my recent technological work has been in Python. Author of devtools and small build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a>.
+<dd><p>My most recent projects have been in Python.</p>
+<ul>
+<li>Authored devtools and simple but helpful build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a> which we used internally at WibiData to cache and share build artifacts.</li>
+</ul>
 </dd>
 <dt>Java</dt>
 <dd>Experienced coding distributed applications and map-reduce programs in Java. I've also used Scala but am less familiar with it.
 </dd>
 <dt>Hadoop Stack</dt>
-<dd>I've used a variety of technologies in the Hadoop ecosystem for model training and analytics: MapReduce, Yarn, HBase, Hive, Scaldng, etc. This space is always moving and I've had to port our ecosystem to different versions of the Cloudera Distribution of Hadoop and others, dealing with the bugs and changes along the way.
+<dd><p>I've used a variety of technologies in the Hadoop ecosystem for model training and analytics: MapReduce, Yarn, HBase, Hive, Scalding, etc.</p>
+<ul>
+<li>Ported our ecosystem to different versions of the Cloudera Distribution of Hadoop and others, dealing with the bugs and changes along the way.</li>
+<li>Debugged numerous grungy issues in HBase ecosystem, such as ZooKeeper references, unblocking coworkers.</li>
+</ul>
 </dd>
 <dt>SCRUM and hygienic coding</dt>
-<dd>I was one of the first scrum masters at WibiData. Led Sprint Planning for platform team. Experienced in a culture of culture of code reviews, code style guides, etc. Owned the effort on writing our Python style guide.
+<dd><p>I was one of the first scrum masters at WibiData. Everyone does it differently.</p>
+<ul>
+<li>Led Sprint Planning for platform team, working with Product to prioritize tasks.</li>
+<li>Experienced in a culture of culture of code reviews, code style guides, etc.</li>
+<li>Owned the effort on writing our Python style guide.</li>
+</ul>
 </dd>
 </dl>
 <h2 id="education">Education</h2>
@@ -68,7 +98,7 @@
 <li><a href="http://i.imgur.com/ApbbKi8.jpg">Hiking</a></li>
 <li><a href="http://markbittman.com/book/how-to-cook-everything-vegetarian/">Vegetarian Cooking</a></li>
 <li>Losing at <a href="http://blog.dota2.com/">Dota</a></li>
-<li>Taking care of my pet <a href="https://www.youtube.com/watch?v=SzU_dGHykZ4">rabbit</a></li>
+<li>My pet <a href="https://www.youtube.com/watch?v=SzU_dGHykZ4">rabbit</a></li>
 </ul>
 </body>
 </html>
