Fix missing period.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <dt>2012-2015</dt>
 <dd><p><em>Software Engineer and Manager/Tech Lead for <a href="https://www.wibidata.com">WibiData, Inc</a></em> (San Francisco).</p>
 <ul>
-<li>Fourth employee at a Big Data startup that grew to over forty</li>
+<li>Fourth employee at a Big Data startup that grew to over forty.</li>
 <li>Survived one name change and three changes to the logo.</li>
 <li>Developed a platform for personalized applications on top of Hadoop, HBase, and Cassandra.
 <ul>
