Fix various feedback issues.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </ul>
 </dd>
 <dt>Java</dt>
-<dd>Experienced coding distributed applications and map-reduce programs in Java. I've also used Scala but am less familiar with it.
+<dd>I am experienced in coding distributed applications and map-reduce programs in Java. I've also used Scala but am less familiar with it.
 </dd>
 <dt>Hadoop Stack</dt>
 <dd><p>I've used a variety of technologies in the Hadoop ecosystem for model training and analytics: MapReduce, Yarn, HBase, Hive, Scalding, etc.</p>
@@ -63,11 +63,11 @@
 <li>Debugged numerous grungy issues in HBase ecosystem, such as ZooKeeper references, unblocking coworkers.</li>
 </ul>
 </dd>
-<dt>SCRUM and hygienic coding</dt>
+<dt>Scrum and hygienic coding</dt>
 <dd><p>I was one of the first scrum masters at WibiData. Everyone does it differently.</p>
 <ul>
 <li>Led Sprint Planning for platform team, working with Product to prioritize tasks.</li>
-<li>Experienced in a culture of culture of code reviews, code style guides, etc.</li>
+<li>Participated in our culture of code reviews, code style guides, etc.</li>
 <li>Owned the effort on writing our Python style guide.</li>
 </ul>
 </dd>
@@ -88,8 +88,8 @@
 <dd><p><em>Bachelor of Arts and Master of Engineering in Computer Science at Cornell University</em> (Ithaca, NY)</p>
 <p>Emphasis on courses in Distributed Systems, Networks, and Theory.</p>
 <ul>
-<li>Independent Research with Prof. Emin Gun Sirer - (2001- 2002) Researched and developed an anonymizing peer-to-peer overlay network based on dining cryptographer nets called ‘Herbivore’. White paper available: <a href="http://www.cs.cornell.edu/People/egs/herbivore" class="uri">http://www.cs.cornell.edu/People/egs/herbivore</a></li>
-<li>Cornell University Neurobiology Department - (2005) Software engineer for audio experimentation and education cross platform workbench program called “Koé”, providing functionality similar to professional synthesis applications, such as Reaktor.</li>
+<li>Independent Research with Prof. Emin Gun Sirer - (2001- 2002) Researched and developed an anonymizing peer-to-peer overlay network based on dining cryptographer nets called ‘Herbivore’. White paper: <a href="http://www.cs.cornell.edu/People/egs/herbivore" class="uri">http://www.cs.cornell.edu/People/egs/herbivore</a></li>
+<li>Cornell University Neurobiology Department - (2005) Worked as a software engineer on an audio research and education workbench program called “Koé”, providing functionality similar to professional synthesis applications, such as Reaktor.</li>
 </ul>
 </dd>
 </dl>
