Include Twitch-specific info

--- a/index.html
+++ b/index.html
@@ -113,11 +113,21 @@
 </ul>
 </dd>
 </dl>
+<h2 id="twitch-specific-information">Twitch Specific Information</h2>
+<ul>
+<li>My stream: <a href="https://twitch.tv/cyberskunk">twitch.tv/cyberskunk</a> Mostly features me losing at PvP in various games.</li>
+<li>Favorite streamers currently:
+<ul>
+<li><a href="https://www.twitch.tv/sheevergaming">twitch.tv/sheevergaming</a> First streamer I supported. Did so much for women in Dota casting.</li>
+<li><a href="https://www.twitch.tv/almightysavo">twitch.tv/almightysavo</a> Always fun to watch. First Twitch Creative I followed after Ross.</li>
+<li>Any Dark Souls stream, really.</li>
+</ul></li>
+<li>Favorite games of 2015/2016: Undertale, Dark Souls III, Stellaris</li>
+</ul>
 <h2 id="hobbies-and-other-activities">Hobbies and Other Activities</h2>
 <ul>
 <li><a href="http://i.imgur.com/ApbbKi8.jpg">Hiking</a></li>
 <li><a href="http://markbittman.com/book/how-to-cook-everything-vegetarian/">Vegetarian Cooking</a></li>
-<li>Losing at <a href="http://blog.dota2.com/">Dota</a></li>
 <li>My pet <a href="https://www.youtube.com/watch?v=SzU_dGHykZ4">rabbit</a></li>
 </ul>
 </body>
