Changes colors to twitch purple

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <li><a href="https://www.twitch.tv/almightysavo">twitch.tv/almightysavo</a> Always fun to watch. First Twitch Creative I followed after Ross.</li>
 <li>Any Dark Souls stream, really.</li>
 </ul></li>
-<li>Favorite games of 2015/2016: Undertale, Dark Souls III, Stellaris</li>
+<li>Favorite games of 2015/2016: Undertale, Dark Souls III, Stellaris, Guild Wars 2</li>
 </ul>
 <h2 id="hobbies-and-other-activities">Hobbies and Other Activities</h2>
 <ul>
