Fix some broken bullet points

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <h2 id="work-experience">Work Experience</h2>
 <dl>
 <dt>Jan 2017 - April 2020</dt>
-<dd><em>Senior Software Engineer at <a href="https://tracegenomics.com/">TraceGenomics Inc.</a></em> (Burlingame, Californa) * Designed and implemented the backend pipeline and software stack for analyzing genomic information using parallel computing, reducing compute time from days to minutes. * Advised and mentored the engineering team as the most senior engineer for 3 years. * Optimized cloud computing to save over 70% per month on compute costs. * Acted as the security engineer on the team; deployed security practices and firewall infrastructure, investigated hacking and phishing attempts, managed company accounts.
+<dd><p><em>Senior Software Engineer at <a href="https://tracegenomics.com/">TraceGenomics Inc.</a></em> (Burlingame, Californa)</p>
+<ul>
+<li>Designed and implemented the backend pipeline and software stack for analyzing genomic information using parallel computing, reducing compute time from days to minutes.</li>
+<li>Advised and mentored the engineering team as the most senior engineer for 3 years.</li>
+<li>Optimized cloud computing to save over 70% per month on compute costs.</li>
+<li>Acted as the security engineer on the team; deployed security practices and firewall infrastructure, investigated hacking and phishing attempts, managed company accounts.</li>
+</ul>
 </dd>
 <dt>May 2015 - Dec 2016</dt>
 <dd><p><em>Software Engineer at <a href="https://www.dropbox.com">Dropbox</a> in the Data Infrastructure Team</em> (San Francisco).</p>
@@ -65,7 +71,13 @@
 <p>I've used a variety of technologies and programming languages, but here I highlight a few and describe what I've used them for in work and play. For any language or technology I probably have &quot;strong opinions weakly held&quot; about what's great and awful about them.</p>
 <dl>
 <dt>Python</dt>
-<dd>I've used python at just about every company for scripting as well as systems coding. * Wrote data pipelines of workers running bioinformatics on a queue of work items * Slack bots for alerting and integrations with external services such as Google sheets * Authored devtools and simple but helpful build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a> which we used internally at WibiData to cache and share build artifacts. * Worked on large Python-based backend systems such as Dropbox's Python based blockstore service and our 'Drone' job scheduler for Hadoop jobs.
+<dd><p>I've used python at just about every company for scripting as well as systems coding.</p>
+<ul>
+<li>Wrote data pipelines of workers running bioinformatics on a queue of work items</li>
+<li>Slack bots for alerting and integrations with external services such as Google sheets</li>
+<li>Authored devtools and simple but helpful build components, e.g. <a href="https://github.com/sqrl/packrat">packrat</a> which we used internally at WibiData to cache and share build artifacts.</li>
+<li>Worked on large Python-based backend systems such as Dropbox's Python based blockstore service and our 'Drone' job scheduler for Hadoop jobs.</li>
+</ul>
 </dd>
 <dt>Java</dt>
 <dd>I am experienced in coding distributed applications and map-reduce programs in Java. For example, it's what I used primarily at Dropbox for our new Data APIs written as DropWizard applications.
@@ -79,13 +91,32 @@
 </ul>
 </dd>
 <dt>Amazon Web Services</dt>
-<dd>At TraceGenomics, we used Amazon's cloud platform for most of our infrastructure * Administered IAM user permissions as well as EC2 role-based access to sensitive credentials. * Profiled performance requirements of different bioinformatic workers to efficiently size instances for company's needs. * Led periodic reviews of our expenses, planning and executing steps to reduce our costs.
+<dd><p>At TraceGenomics, we used Amazon's cloud platform for most of our infrastructure</p>
+<ul>
+<li>Administered IAM user permissions as well as EC2 role-based access to sensitive credentials.</li>
+<li>Profiled performance requirements of different bioinformatic workers to efficiently size instances for company's needs.</li>
+<li>Led periodic reviews of our expenses, planning and executing steps to reduce our costs.</li>
+</ul>
 </dd>
 <dt>Scrum and hygienic coding</dt>
-<dd>I was one of the first scrum masters at WibiData. Everyone does it differently. * Led Sprint Planning for Wibi's platform team, working with Product to prioritize tasks. * Established much of our culture of code reviews, tooling, etc. * Owned the effort on writing our Python style guide. * At TraceGenomics introduced our first implementations of sprint planning and code reviews.
+<dd><p>I was one of the first scrum masters at WibiData. Everyone does it differently.</p>
+<ul>
+<li>Led Sprint Planning for Wibi's platform team, working with Product to prioritize tasks.</li>
+<li>Established much of our culture of code reviews, tooling, etc.</li>
+<li>Owned the effort on writing our Python style guide.</li>
+<li>At TraceGenomics introduced our first implementations of sprint planning and code reviews.</li>
+</ul>
 </dd>
 <dt>Rust</dt>
-<dd>Still learning this technology, but I'm really excited about its potential for critical, low level code. * Coded a number of slack and discord bots to practice Rust: * https://github.com/hyena/gnoll-roll Discord dice bot * https://github.com/hyena/blood-money Webapp in Rust that pulled real time auction house data from the World of Warcraft API and advised on trade good prices for players. Handled thousands of requests per day at its height. Defunct now. * https://github.com/hyena/professor_sloak Bot that gives people random pokemon on request, fortune cookie style.
+<dd><p>Still learning this technology, but I'm really excited about its potential for critical, low level code.</p>
+<ul>
+<li>Coded a number of slack and discord bots to practice Rust:
+<ul>
+<li>https://github.com/hyena/gnoll-roll Discord dice bot</li>
+<li>https://github.com/hyena/blood-money Webapp in Rust that pulled real time auction house data from the World of Warcraft API and advised on trade good prices for players. Handled thousands of requests per day at its height. Defunct now.</li>
+<li>https://github.com/hyena/professor_sloak Bot that gives people random pokemon on request, fortune cookie style.</li>
+</ul></li>
+</ul>
 </dd>
 </dl>
 <h2 id="education">Education</h2>
